[package]
name = "x-ray"
version = "0.1.0"
authors = ["dinesh <dineshpy07@gmail.com>"]

[[bin]]
bench = false
path = "src/main.rs"
name = "x-ray"

[dependencies]
toml = "0.4"
rustc-serialize = "0.3"
rustache = "^0.1"
serde = "1.0.2"
serde_derive = "1.0.2"
regex = "0.2"
clap = "~2.19.0"
nom = "^2.2"
